refactor: update namespace

--- a/composer.json
+++ b/composer.json
@@ -32,12 +32,12 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "MobilityWork\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "MobilityWork\\Tests\\": "tests/"
         }
     },
     "replace": {
