--- a/.env
+++ b/.env
@@ -36,3 +36,11 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&ch
 ###< doctrine/doctrine-bundle ###
 
 PRODUCTION_SECRET_TOKEN=
+
+###> zendesk/zendesk_api_client_php ###
+# To retrieve an API token for your Zendesk server, you can read this doc:
+# https://support.zendesk.com/hc/en-us/articles/226022787-Generating-a-new-API-token-
+ZENDESK_API_SUBDOMAIN=
+ZENDESK_API_USERNAME=
+ZENDESK_API_TOKEN=
+###< zendesk/zendesk_api_client_php ###
