--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
         "symfony/runtime": "7.3.*",
-        "symfony/yaml": "7.3.*"
+        "symfony/yaml": "7.3.*",
+        "zendesk/zendesk_api_client_php": "^4.1"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.64"
