--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "zendesk/zendesk_api_client_php": "^4.1"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.89",
+        "phpstan/phpstan": "^2.1",
         "symfony/maker-bundle": "^1.64"
     },
     "config": {
