refactor: implements port adapter

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,5 +16,7 @@ services:
     MobilityWork\:
         resource: '../src/'
 
+    MobilityWork\Domain\Port\Out\TicketCreatorPort: '@MobilityWork\Infrastructure\Zendesk\ZendeskTicketCreatorAdapter'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
