--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -18,12 +18,12 @@ doctrine:
             Doctrine\DBAL\Platforms\PostgreSQLPlatform: identity
         auto_mapping: true
         mappings:
-            App:
+            MobilityWork:
                 type: attribute
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                dir: '%kernel.project_dir%/src/Domain/Model/Entity'
+                prefix: 'MobilityWork\Domain\Model\Entity'
+                alias: MobilityWork
         controller_resolver:
             auto_mapping: false
 
