--- a/.env
+++ b/.env
@@ -44,3 +44,10 @@ ZENDESK_API_SUBDOMAIN=
 ZENDESK_API_USERNAME=
 ZENDESK_API_TOKEN=
 ###< zendesk/zendesk_api_client_php ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
