--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "zendesk/zendesk_api_client_php": "^4.1"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.3",
         "friendsofphp/php-cs-fixer": "^3.89",
         "phpstan/phpstan": "^2.1",
         "symfony/maker-bundle": "^1.64"
