--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/property-info": "7.3.*",
         "symfony/runtime": "7.3.*",
         "symfony/serializer": "7.3.*",
+        "symfony/validator": "7.3.*",
         "symfony/yaml": "7.3.*",
         "zendesk/zendesk_api_client_php": "^4.1"
     },
