build: define phpstan and csfixer command in composer.json

--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "phpstan": "./vendor/bin/phpstan analyse",
+        "cs-fixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes"
     },
     "conflict": {
         "symfony/symfony": "*"
