--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,8 @@
         ],
         "phpstan": "./vendor/bin/phpstan analyse",
         "csfixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes",
-        "phpunit": "./vendor/bin/phpunit tests"
+        "phpunit": "./vendor/bin/phpunit tests",
+        "unit-tests": "./vendor/bin/phpunit --testsuite unit"
     },
     "conflict": {
         "symfony/symfony": "*"
