--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "doctrine/doctrine-fixtures-bundle": "^4.3",
         "friendsofphp/php-cs-fixer": "^3.89",
         "phpstan/phpstan": "^2.1",
+        "phpunit/php-code-coverage": "^12.4",
         "phpunit/phpunit": "^12.4",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
@@ -75,11 +76,7 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ],
-        "phpstan": "./vendor/bin/phpstan analyse",
-        "csfixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes",
-        "phpunit": "./vendor/bin/phpunit tests",
-        "unit-tests": "./vendor/bin/phpunit --testsuite unit"
+        ]
     },
     "conflict": {
         "symfony/symfony": "*"
