chore: move Dockerfile + config test coverage

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
   php:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: .docker/php/Dockerfile
     restart: always
     depends_on:
       - database
