--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -6,7 +6,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     install-php-extensions \
     pdo_pgsql \
     xdebug \
+    @composer \
     ;
+
+# https://getcomposer.org/doc/03-cli.md#composer-allow-superuser
+ENV COMPOSER_ALLOW_SUPERUSER=1
 
 COPY --link .docker/php/conf.d/app.dev.ini $PHP_INI_DIR/app.conf.d/
 
