ci: change https rule

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,12 +54,7 @@ jobs:
         run: curl -v --fail-with-body http://localhost
       -
         name: Check HTTPS reachability
-        run: |
-          for i in $(seq 1 10); do
-            curl -vk --fail-with-body https://localhost && exit 0
-            sleep 3
-          done
-          exit 1
+        run: curl -v --fail-with-body https://localhost
       -
         name: Create test database
         run: docker compose exec -T php bin/console -e test doctrine:database:create
