build: config xdebug

--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -12,6 +12,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # https://getcomposer.org/doc/03-cli.md#composer-allow-superuser
 ENV COMPOSER_ALLOW_SUPERUSER=1
 
-COPY --link .docker/php/conf.d/app.dev.ini $PHP_INI_DIR/app.conf.d/
+COPY --link .docker/php/conf.d/app.dev.ini $PHP_INI_DIR/conf.d/
 
 CMD ["frankenphp", "run", "--config", "/etc/caddy/Caddyfile", "--watch"]
